k8s/environments/zipkin/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
  namespace: egov-msa
  labels:
    env: production
    tier: backend
    app: zipkin
    name: zipkin-ingress
spec:
  rules:
  - host: <Zipkin 도메인> # TODO
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: zipkin
            port:
              number: 9411
